--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "bin-collection-service",
+  "version": "1.0.0",
   "dependencies": {
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0"
