add deployment config and deal with endpoint errors - add helm charts - add dependabot - extend testing - add home assistant dashbaord example

--- a/homeassistant-config-example/configuration.yaml
+++ b/homeassistant-config-example/configuration.yaml
@@ -1,7 +1,7 @@
 sensor:
   - platform: rest
      name: Bin Collection
-      resource: http://your-node-server-ip:your-node-server-port/bin-collection?postcode=bl2+4ds&address=100010920644
+      resource: http://your-node-server-ip:your-node-server-port/bin-collection?postcode=######&address=###########
       json_attributes:
         - green
         - grey
